# sdk-nrf

./: .checkpatch.conf  .gitignore  CODEOWNERS  west.yml
applications/nrf5340_audio/: CMakeLists.txt  Kconfig.nrf5340_audio  README.md  README.rst  projects.cmake  sample.yaml
applications/nrf5340_audio/doc/: Doxyfile  Nordic Semiconductor SOFTWARE LICENSE AGREEMENT (5-clause).txt  nRF5340_Audio_DK_user_guide.rst
applications/nrf5340_audio/ext/bluedroid/: CMakelists.txt  README.md
applications/nrf5340_audio/ext/bluedroid/decoder/include/: oi_cpu_dep.h
applications/nrf5340_audio/ext/bluedroid/encoder/include/: sbc_encoder.h
applications/nrf5340_audio/ext/bluedroid/encoder/srce/: sbc_encoder.c
applications/nrf5340_audio/include/: audio_codec.h  audio_i2s.h  audio_usb.h  board_version.h  button_assignments.h  button_handler.h  channel_assignment.h  contin_array.h  cs47l63_comm.h  cs47l63_reg_conf.h  ctrl_events.h  data_fifo.h  error_handler.h  fw_info_app.h  hw_codec.h  led.h  macros_common.h  pcm_stream_channel_modifier.h  pmic.h  power_module.h  sd_card.h  streamctrl.h  sw_codec_select.h  tone.h  uicr.h
applications/nrf5340_audio/include/drivers/: ina231.h  max14690.h
applications/nrf5340_audio/include/subsys/bluetooth/: ble_acl_common.h  ble_acl_gateway.h  ble_acl_headset.h  ble_audio_services.h  ble_core.h  ble_hci_vsc.h  ble_trans.h
applications/nrf5340_audio/nrf5340_audio_app/: CMakeLists.txt  Kconfig
applications/nrf5340_audio/nrf5340_audio_app/dts/bindings/: gpio-nrf5340-audio-dk.yaml
applications/nrf5340_audio/nrf5340_audio_app/src/: audio_datapath.c  audio_datapath.h  audio_i2s.c  audio_usb.c  audio_usb.h  button_handler.c  button_handler.h  ctrl_events.h  data_fifo.c  error_handler.c  error_handler.h  led.c  led.h  macros_common.h  main.c  pcm_mix.h  pcm_stream_channel_modifier.c  power_module.c  power_module.h  streamctrl.c  sw_codec_select.c  sw_codec_select.h
applications/nrf5340_audio/nrf5340_audio_app/src/audio/: Kconfig  audio_codec.c  audio_datapath.c  audio_datapath.h  audio_sync_timer.c  streamctrl.c  sw_codec_select.c  sw_codec_select.h
applications/nrf5340_audio/nrf5340_audio_app/src/bluetooth/: ble_acl_headset.c  ble_audio_services.c  ble_trans.c  ble_trans.h
applications/nrf5340_audio/nrf5340_audio_app/src/drivers/: CMakeLists.txt  cs47l63_fw_img.c  cs47l63_fw_img.h  cs47l63_syscfg_regs.c  cs47l63_syscfg_regs.h  ina231.c  ina231.h  max14690.c  max14690.h
applications/nrf5340_audio/nrf5340_audio_app/src/events/: ctrl_events.c
applications/nrf5340_audio/nrf5340_audio_app/src/modules/: audio_i2s.c  audio_i2s.h  led.c
applications/nrf5340_audio/nrf5340_audio_app/src/subsys/bluetooth/: ble_hci_vsc.h  ble_trans.c  ble_trans.h
applications/nrf5340_audio/nrf5340_audio_app/src/utils/: CMakeLists.txt  contin_array.h  pcm_mix.c  tone.c
applications/nrf5340_audio/projects/: buildprog.py  nrf5340_audio_dk_devices.json  nrf5340_audio_dk_devices.py  program.py
applications/nrf5340_audio/projects/nrf5340_audio_app/: CMakeLists.txt  main.c  prj.conf  prj_debug.conf  prj_gateway.conf  prj_headset.conf  prj_release.conf
applications/nrf5340_audio/projects/nrf5340_audio_net/: ble5-ctr-rpmsg_3216.hex
applications/nrf5340_audio/src/: audio_codec.c  audio_datapath.c  audio_usb.c  board_version.c  button_handler.c  channel_assignment.c  contin_array.c  cs47l63_comm.c  ctrl_events.c  data_fifo.c  debug.c  error_handler.c  fw_info_app.c  fw_info_app.c.in  hw_codec.c  led.c  main.c  pcm_stream_channel_modifier.c  pmic.c  power_module.c  sd_card.c  streamctrl.c  sw_codec_select.c  tone.c  uicr.c
applications/nrf5340_audio/src/audio/: Kconfig  audio_codec.c  audio_datapath.c  audio_sync_timer.c  audio_sync_timer.h
applications/nrf5340_audio/src/bluetooth/: ble_core.c  ble_trans.c  ble_trans.h
applications/nrf5340_audio/src/drivers/: cs47l63_comm.c  ina231.c  max14690.c
applications/nrf5340_audio/src/modules/: audio_i2s.c  hw_codec.c
applications/nrf5340_audio/src/subsys/bluetooth/: ble_acl_common.c  ble_acl_gateway.c  ble_acl_headset.c  ble_audio_services.c  ble_core.c  ble_hci_vsc.c  ble_trans.c
applications/nrf5340_audio/src/utils/: board_version.c
applications/nrf5340_audio/src/utils/macros/: macros_common.h
applications/nrf5340_audio/tools/buildprog/: buildprog.py  program.py
applications/nrf5340_audio/tools/terminator_UART/: nrf5340_audio_dk_config_uart  terminator_start.sh
applications/nrf5340_audio/tools/uart_terminal/scripts/: open_putty.py  open_terminator.py
applications/nrf5340_audio/verification/: check.py  verify.cmake
boards/arm/nrf5340_audio_dk_nrf5340/: Kconfig  board.h  nrf5340_audio_dk_nrf5340_cpuapp_common.dts  nrf5340_audio_dk_nrf5340_shared.dts
boards/arm/nrf5340_audio_dk_nrf5340/doc/: index.rst
doc/nrf/: links.txt
doc/nrf/images/: octave_application_structure.vsdx  octave_application_structure_gateway.vsdx  octave_application_structure_generic.vsdx  octave_application_structure_sync_module.vsdx  octave_application_sync_module_states.vsdx
scripts/: requirements-ci.txt
scripts/partition_manager/: partition_manager.rst
tests/nrf5340_audio/: tests.cmake
tests/nrf5340_audio/contin_array/: CMakeLists.txt  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/data_fifo/: CMakeLists.txt  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/macros/: CMakeLists.txt  main.c  testcase.yaml
tests/nrf5340_audio/max14690/: CMakeLists.txt  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/pcm_mix/: CMakeLists.txt  main.c  testcase.yaml
tests/nrf5340_audio/pcm_stream_channel_modifier/: CMakeLists.txt  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/sw_codec_lc3/: CMakeLists.txt  README.md  main.c  prj.conf  testcase.yaml
tests/nrf5340_audio/tone/: CMakeLists.txt  main.c  testcase.yaml
tests/nrf5340_audio/unit_test_example/: CMakeLists.txt  README.md  README.txt  main.c  testcase.yaml
